reproduction of slot ref issue - PR: #5337

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <script nomodule src="/build/stencil-v4-sc-slot-ref.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-component>
+      <span slot="header">Header Text</span>
+      Content text
+    </my-component>
   </body>
 </html>
